Fixed anchor jumping, set background image for first background section, made it parallax, almost fixed message font sizing

--- a/css/index.css
+++ b/css/index.css
@@ -18,14 +18,18 @@ p{
 .background-section{
     height: 50vh;
     width: 100vw;
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 .background-section:nth-child(even){
-    background-color: #9BC1BC;
+    background-color: #CED0CE;
 }
 
 .background-section:nth-child(odd){
-    background-color: #CED0CE;
+    background-color: rgba(155, 193, 188, .9);
 }
 
 .background-section:nth-child(n + 2){
@@ -34,6 +38,18 @@ p{
 
 .background-section:last-of-type{
     height: 50vh;
+}
+
+#background-section-1{
+    background-image: url(/content/images/carrying-cheerful.jpg);
+    background-size: cover;
+    background-position-y: 25%;
+}
+
+.background-layer{
+    width: 100%;
+    height: 100%;
+    background-color: inherit;
 }
 
 #header{
@@ -72,7 +88,7 @@ p{
     background-color: #E6E8E6;
     box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.23);
     box-sizing: border-box;
-    padding: 50px;
+    padding: 5vw;
 }
 
 #message-body{
@@ -84,7 +100,7 @@ p{
 }
 
 .message{
-    font-size:2em;
+    font-size:calc(100vw/100vh);
 }
 
 .message:first-of-type{
@@ -107,6 +123,7 @@ p{
     width: 100%;
     height: 100%;
     padding: 10px;
+    padding-top: 5vh;
     position: absolute;
     left: 0;
     background-color: transparent;
@@ -125,4 +142,11 @@ p{
 
 #contact-section{
     top: 300vh;
+}
+
+.section-anchor{
+    display: block;
+    position: relative;
+    top: -7vh;
+    padding-top: 7vh;
 }
